update navigation to redirect to contrib repo

--- a/_data/navigation_boxes.yml
+++ b/_data/navigation_boxes.yml
@@ -59,4 +59,4 @@
   desc: Help us make DeFi easier to explore
   icon: heart
   doc: contribute
-  external: https://defi.navy/contributionguide/
+  external: https://github.com/DefiNavy/website-contributions
