add airdrops section

--- a/_data/navigation_docs.yml
+++ b/_data/navigation_docs.yml
@@ -22,5 +22,6 @@
   - utilities_development
   - utilities_jobs
   - utilities_misc_useful_sites
+  - utilities_airdrops
   - utilities_price_tracking
   - utilities_wallets
