update [add link] issue links

--- a/_data/navigation_mobile.yml
+++ b/_data/navigation_mobile.yml
@@ -14,5 +14,5 @@
   button: primary
 
 - title: Add your link
-  url: https://github.com/DefiNavy/website-contributions/issues/new?assignees=dreth&labels=add+link&template=ADD-LINK.yml&title=%5BAdd%5D%3A+%3CProject%2C+project+names+or+%22Multiple+%28if+they%27re+too+many%29%22%3E 
+  url: https://github.com/DefiNavy/website-contributions/issues/new?assignees=dreth&labels=add+link&template=ADD-LINK.yml&title=%5BAdd%5D%3A+
   button: danger
