--- a/_data/navigation_header.yml
+++ b/_data/navigation_header.yml
@@ -28,9 +28,9 @@ right:
     url: https://github.com/DefiNavy/website-contributions/issues/new?assignees=dreth&labels=add+link&template=ADD-LINK.yml&title=%5BAdd%5D%3A+
     button: danger-outline
 
-  # - title: Contact
-  #   url: /contact/
-  #   button: primary
+  - title: Modify a link
+    url: https://github.com/DefiNavy/website-contributions/issues/new?assignees=dreth&labels=modify+or+update+link&template=MODIFY-LINK.yml&title=%5BModify%5D%3A+
+    button: warning-outline
 
   # - title: Changelog
   #   url: /contact/
