add dashboards section

--- a/_data/navigation_docs.yml
+++ b/_data/navigation_docs.yml
@@ -5,6 +5,7 @@
   - dapps_assets
   - dapps_indexes
   - dapps_insurance
+  - dapps_dashboards
   - dapps_bridges
   - dapps_options
   - dapps_staking
