change modify button outline mobile

--- a/_data/navigation_mobile.yml
+++ b/_data/navigation_mobile.yml
@@ -19,4 +19,4 @@
 
 - title: Modify a link
   url: https://github.com/DefiNavy/website-contributions/issues/new?assignees=dreth&labels=modify+or+update+link&template=MODIFY-LINK.yml&title=%5BModify%5D%3A+
-  button: warning-outline
+  button: warning
