--- a/_data/navigation_docs.yml
+++ b/_data/navigation_docs.yml
@@ -21,6 +21,7 @@
 - title: Utilities
   links:
   - utilities_block_explorers
+  - utilities_ethereum_metrics
   - utilities_development
   - utilities_jobs
   - utilities_misc_useful_sites
