huge update, chain selector, reordering pages and a ton of other stuff

--- a/_data/navigation_docs.yml
+++ b/_data/navigation_docs.yml
@@ -2,12 +2,13 @@
   links:
   - dapps_dexes
   - dapps_lending
-  - dapps_assets
+  - dapps_stablecoins
   - dapps_indexes
   - dapps_insurance
   - dapps_dashboards
   - dapps_bridges
   - dapps_options
+  - dapps_liquid_staking
   - dapps_staking
   - dapps_yield
   - dapps_domain
